Add placeholder files required for build

--- a/src/dataset-curation.ipynb
+++ b/src/dataset-curation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,14 +30,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Retrieving SummaryDoc documents: 100%|██████████| 10000/10000 [00:20<00:00, 481.64it/s]\n"
+      "/home/sullberg/miniconda3/envs/materials-embedding-book/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Retrieving SummaryDoc documents: 100%|██████████| 10000/10000 [00:24<00:00, 411.09it/s]\n"
      ]
     }
    ],
@@ -81,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +284,7 @@
        "[9994 rows x 6 columns]"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +316,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -338,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +349,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -370,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +381,7 @@
        "<Axes: xlabel='Band Gap (eV)', ylabel='Count'>"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -401,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +412,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -428,15 +430,15 @@
    "source": [
     "def characterize_bandgap(band_gap):\n",
     "    if band_gap == 0:\n",
-    "        return \"MTL\"\n",
+    "        return \"MTL\"     # Metallic\n",
     "    elif band_gap < 0.5:\n",
-    "        return \"NBG\"\n",
+    "        return \"NBG\"     # Narrow band gap\n",
     "    elif band_gap < 1.5:\n",
-    "        return \"SEMI\"\n",
+    "        return \"SEMI\"    # Conventional semiconductor\n",
     "    elif band_gap < 2.5:\n",
-    "        return \"WBG\"\n",
+    "        return \"WBG\"     # Wide band gap\n",
     "    else:\n",
-    "        return \"INS\"\n",
+    "        return \"INS\"     # Insulator\n",
     "\n",
     "df[\"band_gap_character\"] = df[\"band_gap\"].apply(characterize_bandgap)\n",
     "\n",
